--- a/package.json
+++ b/package.json
@@ -3,7 +3,10 @@
     "version": "1.0.0",
     "description": "html字符串生成pdf文件的命令行工具，基于puppeteer.js.",
     "main": "./src/index.ts",
-    "repository": "git@github.com:fw6/html2pdf.git",
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/fw6/html2pdf.git"
+    },
     "author": "fw6",
     "license": "MIT",
     "private": false,
