--- a/.npmrc
+++ b/.npmrc
@@ -1,2 +1,4 @@
 PUPPETEER_DOWNLOAD_HOST = https://npm.taobao.org/mirrors
 registry=https://registry.npm.taobao.org/
+sass_binary_site=https://npm.taobao.org/mirrors/node-sass/
+electron_mirror=https://npm.taobao.org/mirrors/electron/
