--- a/package.json
+++ b/package.json
@@ -1,13 +1,16 @@
 {
-    "name": "html2pdf",
+    "name": "@fw/html2pdf",
     "version": "1.0.0",
     "description": "html字符串生成pdf文件的命令行工具，基于puppeteer.js.",
-    "main": "./src/index.ts",
+    "main": "./index.js",
     "repository": {
         "type": "git",
         "url": "https://github.com/fw6/html2pdf.git"
     },
-    "author": "fw6",
+    "directories": {
+        "lib": "lib",
+        "public": "public"
+      },
     "license": "MIT",
     "private": false,
     "bin": {
@@ -25,5 +28,9 @@
         "inquirer": "^7.3.3",
         "minimist": "^1.2.5",
         "puppeteer": "^5.2.1"
+    },
+    "author": {
+        "name": "fw6",
+        "url": "https://github.com/fw6"
     }
 }
